# computergraphics

./: .gitignore  CMakeLists.txt  README.md
src/: BlackHoleEffect.cpp  BlackHoleEffect.h  Easings.h  Effect.h  ExportManager.cpp  ExportManager.h  FileDialog.cpp  FileDialog.h  FireEffect.cpp  FireEffect.h  LightningEffect.cpp  LightningEffect.h  LightningFlashReactive.h  NebulaEffect.cpp  NebulaEffect.h  Particle.h  Project.cpp  Project.h  RainEffect.cpp  RainEffect.h  SceneEffect.cpp  SceneEffect.h  SnowEffect.cpp  SnowEffect.h  SparkEffect.cpp  SparkEffect.h  UIManager.cpp  UIManager.h  main.cpp
